# open-rag-layer

./: .gitignore  README.md  pyproject.toml
examples/: basic_rag.py  multimodal_search.py  office_search.py
rag_layer/: __init__.py  config.py  schema.py
rag_layer/chunking/: __init__.py  base.py  text_chunker.py
rag_layer/embeddings/: __init__.py  base.py  gemini.py  mock.py
rag_layer/extractors/: __init__.py  audio.py  base.py  image.py  pdf.py  text.py  video.py
rag_layer/indexes/: __init__.py  base.py  memory.py  qdrant.py
rag_layer/ingestion/: __init__.py  ingestor.py
rag_layer/observability/: __init__.py  logger.py
rag_layer/retrieval/: __init__.py  engine.py
tests/: test_embeddings.py  test_ingestion.py  test_retrieval.py  test_schema.py
